--- a/main.tex
+++ b/main.tex
@@ -145,4 +145,30 @@ The third counting principle says the following: If $A$ and $B$ are finite sets 
 \end{nremark}
 
 \subsection{Correspondences}
+
+\section{Fundamental counting coefficients \& permutations}
+
+\subsection{Permutations}
+\begin{ndefn}
+	A \textbf{permutation} of a finite set is
+\end{ndefn}
+
+Number of permutations
+
+Different notations for permutations
+
+Cycles etc.
+
+Stirling numbers of the first kind
+
+\section{Recurrence relations}
+\subsection{Various formulas and techniques for binomial coefficients}
+
+\subsection{Formulas for the Stirling numbers of the first and second kinds}
+
+\section{Generating functions I}
+
+\subsection{Generating functions in general}
+
+\subsection{Fibonacci-like sequences}
 \end{document}
