Finished rough outline of part 1

--- a/main.tex
+++ b/main.tex
@@ -146,6 +146,7 @@ The third counting principle says the following: If $A$ and $B$ are finite sets 
 
 \subsection{Correspondences}
 
+\newpage
 \section{Fundamental counting coefficients \& permutations}
 
 \subsection{Permutations}
@@ -161,14 +162,45 @@ Cycles etc.
 
 Stirling numbers of the first kind
 
+\newpage
 \section{Recurrence relations}
 \subsection{Various formulas and techniques for binomial coefficients}
 
 \subsection{Formulas for the Stirling numbers of the first and second kinds}
 
+\newpage
 \section{Generating functions I}
 
 \subsection{Generating functions in general}
+Definition of addition
+
+Definition of multiplication
 
 \subsection{Fibonacci-like sequences}
+Leading up to Theorem 3.1.
+
+\newpage
+Proof and illustrations of Theorem 3.1.
+
+\newpage 
+The method of exponential generating functions
+
+\newpage
+\section{Summation}
+Induction, with examples
+
+The example of derangements
+
+\section{Inversion}
+The general idea is that we are given a sequence expressed in terms of another, and would like to invert this.
+
+\newpage
+\section{Inclusion-exclusion}
+
+\newpage
+\section{Asymptotic analysis}
+Stirling's approximation etc.
+
+\newpage
+\section{Graph theory}
 \end{document}
